--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -41,7 +41,7 @@
   });
 
   myApp.controller('ChallengeGetter', [ '$scope', '$sce', '$http', function($scope, $sce, $http) {
-    $http.get("http://104.239.139.43:8000/api/challenges/").success(function(data) {
+    $http.get("http://localhost:8000/api/challenges/").success(function(data) {
       $scope.challenges = data.challenges;
       console.log($scope.challenges);
     });
@@ -121,14 +121,14 @@
               <ul class="gallery-post-grid holder">
                 <div ng-repeat="challenge in challenges">
                   <li  class="span4 gallery-item" data-id="id-1" data-type="illustration">
-                      <a ng-href="http://104.239.139.43:8000/challenges/[[ challenge.id ]]">
+                      <a ng-href="http://localhost:8000/challenges/[[ challenge.id ]]">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet"> <!-- Need to look into gallery-hover -->
                         </span>
                         <div style="max-height: 300px; max-width: 370px; overflow: hidden">
                           <img ng-src="[[challenge.landing_img]]" alt="Gallery" class="grayscale">
                         </div>
                       </a>
-                      <span class="project-details"><a ng-href="http://104.239.139.43:8000/challenges/[[ challenge.id ]]">[[challenge.name]]</a>Examples: [[challenge.flavors]]</span>
+                      <span class="project-details"><a ng-href="http://localhost:8000/challenges/[[ challenge.id ]]">[[challenge.name]]</a>Examples: [[challenge.flavors]]</span>
                     </li>
                 </div>
               </ul>
