--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -41,7 +41,7 @@
   });
 
   myApp.controller('FunRunGetter', [ '$scope', '$sce', '$http', function($scope, $sce, $http) {
-    $http.get("http://localhost:8000/api/funruns/").success(function(data) {
+    $http.get("http://104.239.139.43:8000/api/funruns/").success(function(data) {
       $scope.funruns = data.funruns;
       console.log($scope.funruns);
     });
@@ -120,14 +120,14 @@
               <ul class="gallery-post-grid holder">
                 <div ng-repeat="run in funruns">
                   <li  class="span4 gallery-item" data-id="id-1" data-type="illustration">
-                      <a ng-href="http://localhost:8000/funruns/[[ run.id ]]">
+                      <a ng-href="http://104.239.139.43:8000/funruns/[[ run.id ]]">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet"> <!-- Need to look into gallery-hover -->
                         </span>
                         <div style="max-height: 300px; max-width: 370px; overflow: hidden">
                           <img ng-src="[[run.landing_img]]" alt="Gallery" class="grayscale">
                         </div>
                       </a>
-                      <span class="project-details"><a ng-href="http://localhost:8000/funruns/[[ run.id ]]">[[run.name]]</a>[[run.distance]] course<br/>[[run.short]]</span>
+                      <span class="project-details"><a ng-href="http://104.239.139.43:8000/funruns/[[ run.id ]]">[[run.name]]</a>[[run.distance]] course<br/>[[run.short]]</span>
                     </li>
                 </div>
               </ul>
