--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -41,7 +41,7 @@
   });
 
   myApp.controller('LocationGetter', [ '$scope', '$sce', '$http', function($scope, $sce, $http) {
-    $http.get("http://localhost:8000/api/locations/").success(function(data) {
+    $http.get("http://104.239.139.43:8000/api/locations/").success(function(data) {
       $scope.locations = data.locations;
       console.log($scope.locations);
     });
@@ -133,14 +133,14 @@
               <ul class="gallery-post-grid holder">
                 <div ng-repeat="location in locations">
                   <li  class="span4 gallery-item" data-id="id-1" data-type="illustration">
-                      <a ng-href="http://localhost:8000/locations/[[ location.id ]]">
+                      <a ng-href="http://104.239.139.43:8000/locations/[[ location.id ]]">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet"> <!-- Need to look into gallery-hover -->
                         </span>
                         <div style="max-height: 300px; max-width: 370px; overflow: hidden">
                           <img ng-src="[[location.landing_img]]" alt="Gallery" class="grayscale">
                         </div>
                       </a>
-                      <span class="project-details"><a ng-href="http://localhost:8000/locations/[[ location.id ]]">[[location.name]]</a>[[location.nickname]]</span>
+                      <span class="project-details"><a ng-href="http://104.239.139.43:8000/locations/[[ location.id ]]">[[location.name]]</a>[[location.nickname]]</span>
                     </li>
                 </div>
               </ul>
