--- a/app/templates/challengetempl.html
+++ b/app/templates/challengetempl.html
@@ -179,13 +179,12 @@ $(document).ready(function () {
         
         <!-- Thumbnail Grid
         ================================================== -->
+        <h2 class="lead" style="text-align: center">[[challenge.description]]</h2>
         <ul class="thumbnails">
             <li class="span4"><img ng-src="[[ imgs[0] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
             <li class="span4"><img ng-src="[[ imgs[1] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
             <li class="span8"><img ng-src="[[ imgs[2] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
         </ul>
-        <p class="lead">[[challenge.description]]</p>
-
 
         <!-- Video Section
         ================================================== -->
