Updated locationTempl photos

--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -181,13 +181,12 @@ $(document).ready(function () {
         
         <!-- Thumbnail Grid
         ================================================== -->
+        <h2 class="lead" style="text-align: center">[[theme.description]]</h2>
         <ul class="thumbnails">
             <li class="span4"><img ng-src="[[ imgs[0] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
             <li class="span4"><img ng-src="[[ imgs[1] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
             <li class="span8"><img ng-src="[[ imgs[2] ]]" alt="Thumbnail" class="thumbnail" size="width: 100%"/></li>
         </ul>
-        <p class="lead">[[theme.description]]</p>
-
 
         </div> <!--End page content column-->
 
