--- a/app/templates/challengetempl.html
+++ b/app/templates/challengetempl.html
@@ -145,6 +145,7 @@ $(document).ready(function () {
               <li><a href="/themes">Fun Themes</a></li>
               <li class="active"><a href="/challenges">Fun Challenges</a></li>
               <li><a href="/locations">Fun Locations</a></li>
+              <li><a href="/tech">Technical</a></li>
               <li><a href="/about">About</a></li>
             </ul>
          
@@ -161,6 +162,7 @@ $(document).ready(function () {
                     <option value="/themes">Fun Themes</option>
                     <option value="/challenges">Fun Challenges</option>
                     <option value="/locations">Fun Locations</option>
+                    <option value="/tech">Technical</option>
                     <option value="/about">About</option>
                 </select>
               </div>
