--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -97,6 +97,7 @@ $(document).ready(function () {
             <li><a href="/themes">Fun Themes</a></li>
             <li><a href="/challenges">Fun Challenges</a></li>
             <li><a href="/locations">Fun Locations</a></li>
+            <li><a href="/tech">Technical</a></li>
             <li><a href="/about">About</a></li>
           </ul>
        
@@ -113,6 +114,7 @@ $(document).ready(function () {
                   <option value="/themes">Fun Themes</option>
                   <option value="/challenges">Fun Challenges</option>
                   <option value="/locations">Fun Locations</option>
+                  <option value="/tech">Technical</option>
                   <option value="/about">About</option>
               </select>
             </div>
@@ -241,7 +243,7 @@ $(document).ready(function () {
                         <div class="span6"><span class="left">Copyright 2012 Piccolo Theme. All rights reserved.</span></div>
                         <div class="span6">
                             <span class="right">
-                            <a href="/">Home</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/funruns">Fun Events</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/themes">Fun Themes</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/challenges">Fun Challenges</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/locations">Fun Locations</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/about">About</a>
+                            <a href="/">Home</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/funruns">Fun Events</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/themes">Fun Themes</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/challenges">Fun Challenges</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/locations">Fun Locations</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/tech">Technical</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/about">About</a>
                             </span>
                         </div>
                     </div>
