--- a/app/templates/themetempl.html
+++ b/app/templates/themetempl.html
@@ -147,6 +147,7 @@ $(document).ready(function () {
               <li class="active"><a href="/themes">Fun themes</a></li>
               <li><a href="/challenges">Fun Challenges</a></li>
               <li><a href="/locations">Fun Locations</a></li>
+              <li><a href="/tech">Technical</a></li>
               <li><a href="/about">About</a></li>
             </ul>
          
@@ -163,6 +164,7 @@ $(document).ready(function () {
                     <option value="/themes">Fun Themes</option>
                     <option value="/challenges">Fun Challenges</option>
                     <option value="/locations">Fun Locations</option>
+                    <option value="/tech">Technical</option>
                     <option value="/about">About</option>
                 </select>
               </div>
@@ -286,8 +288,7 @@ $(document).ready(function () {
                         <div class="span6"><span class="left">Copyright 2012 Piccolo Theme. All rights reserved.</span></div>
                         <div class="span6">
                             <span class="right">
-                            <a href="/">Home</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/funruns">Fun Events</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/themes">Fun Themes</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/challenges">Fun Challenges</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/locations">Fun Locations</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/about">About</a>
-                            </span>
+                            <a href="/">Home</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/funruns">Fun Events</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/themes">Fun Themes</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/challenges">Fun Challenges</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/locations">Fun Locations</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/tech">Technical</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="/about">About</a>
                         </div>
                     </div>
                 </div>
