--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -80,6 +80,7 @@
               <li><a href="/themes">Fun Themes</a></li>
               <li><a href="/challenges">Fun Challenges</a></li>
               <li><a href="/locations">Fun Locations</a></li>
+              <li><a href="/tech">Technical</a></li>
               <li class="active"><a href="/about">About</a></li>
             </ul>
          
@@ -96,6 +97,7 @@
                     <option value="/themes">Fun Themes</option>
                     <option value="/challenges">Fun Challenges</option>
                     <option value="/locations">Fun Locations</option>
+                    <option value="/tech">Technical</option>
                     <option value="/about">About</option>
                 </select>
               </div>
@@ -129,13 +131,6 @@
                         <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Prog Rock, Kpop<br/>
                         <i class="icon-heart"></i><strong>Loves:</strong> Cats, Friendship That's Magic, Gaming, Grandma, Doctor Who, Board Games<br/>
                         <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Defridgerators: where it just makes things more warm." -Kurt Bixby<br/>
-                        <hr style="border: 1px outset #595955;"/>
-                        <i class="icon-cog"></i><strong>Commits: </strong>50 <br/>
-                        <i class="icon-list"></i><strong>Issues: </strong>17 <br/>
-                        <i class="icon-check"></i><strong>Unit Tests: </strong>0 <br/>
-                        <i class="icon-star"></i><strong>Major Responsibilities: </strong>Bootstrap, nginx, uWSGI, initial setup, data mining, github issue tracking, front end design, and angular. <br/>
-                        
-
                     </p>
                 </div>
                 <div class="span4">
@@ -152,11 +147,6 @@
                         <i class="icon-headphones"></i><strong>Favorite Music:</strong> Alternative, Electronic, Rock, Grunge, "Smooth" by Santana ft. Rob Thomas of Matchbox Twenty<br/>
                         <i class="icon-heart"></i><strong>Loves:</strong> Video Games, Board Games, Music, Seattle Seahawks<br/>
                         <i class="icon-comment"></i><strong>Favorite Quote: </strong> "They don't think it be like it is, but it do." -Abraham Lincoln<br/>
-                        <hr style="border: 1px outset #595955;"/>
-                        <i class="icon-cog"></i><strong>Commits: </strong>40 <br/>
-                        <i class="icon-list"></i><strong>Issues: </strong>18 <br/>
-                        <i class="icon-check"></i><strong>Unit Tests: </strong>28 <br/>
-                        <i class="icon-star"></i><strong>Major Responsibilities: </strong>Initial setup, data mining, API design, API implementation, API documentation, and unit tests. <br/>
                     </p>
                 </div>
                 <div class="span4">
@@ -173,11 +163,6 @@
                         <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Alternative<br/>
                         <i class="icon-heart"></i><strong>Loves:</strong> Dogs, Cats, Friends, Family, Gaming, Movies, TV, Board Games<br/>
                         <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Intelligence is the ability to adapt to change."  -Stephen Hawking<br/>
-                        <hr style="border: 1px outset #595955;"/>
-                        <i class="icon-cog"></i><strong>Commits: </strong>97 <br/>
-                        <i class="icon-list"></i><strong>Issues: </strong>8 <br/>
-                        <i class="icon-check"></i><strong>Unit Tests: </strong>0 <br/>
-                        <i class="icon-star"></i><strong>Major Responsibilities: </strong>Front end design, bug fixes, embedding media, data mining, initial setup, nginx and bootstrap. <br/>
                     </p>
                 </div>
             </div>
@@ -196,11 +181,6 @@
                         <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Kpop <br/>
                         <i class="icon-heart"></i><strong>Loves:</strong> Skiing, Hiking, Camping, Swimming, Dogs, Austin, Board Games<br/>
                         <i class="icon-comment"></i><strong>Favorite Quote: </strong> “If I had asked people what they wanted, they would have said faster horses.” -Henry Ford <br/>
-                        <hr style="border: 1px outset #595955;"/>
-                        <i class="icon-cog"></i><strong>Commits: </strong>63 <br/>
-                        <i class="icon-list"></i><strong>Issues: </strong>14 <br/>
-                        <i class="icon-check"></i><strong>Unit Tests: </strong>11 <br/>
-                        <i class="icon-star"></i><strong>Major Responsibilities: </strong>Flask models, test cases, UML model, and data mining. <br/>
                     </p>
                 </div>
                 <div class="span4">
@@ -217,11 +197,6 @@
                         <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Classical, DnB<br/>
                         <i class="icon-heart"></i><strong>Loves:</strong> Gaming, Soccer, Anime<br/>
                         <i class="icon-comment"></i><strong>Favorite Quote: </strong> _(┐「ε:)_<br/>
-                        <hr style="border: 1px outset #595955;"/>
-                        <i class="icon-cog"></i><strong>Commits: </strong>13 <br/>
-                        <i class="icon-list"></i><strong>Issues: </strong>10 <br/>
-                        <i class="icon-check"></i><strong>Unit Tests: </strong>0 <br/>
-                        <i class="icon-star"></i><strong>Major Responsibilities: </strong>Front end design, data mining, using angular to dynamically fill pages, and embedding media. <br/>
 					</p>
                 </div>
                 <div class="span4">
@@ -238,49 +213,9 @@
                         <i class="icon-headphones"></i><strong>Favorite Music:</strong> Spanish Rock, EDM, Hip Hop, Classic Rock<br/>
                         <i class="icon-heart"></i><strong>Loves:</strong> Soccer, Super Smash Brothers, Dragonball<br/>
                         <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Every force you create has an echo. Your own bad energy will be your undoing" -Super Gogeta<br/>
-                        <hr style="border: 1px outset #595955;"/>
-                        <i class="icon-cog"></i><strong>Commits: </strong>7 <br/>
-                        <i class="icon-list"></i><strong>Issues: </strong>6 <br/>
-                        <i class="icon-check"></i><strong>Unit Tests: </strong>0 <br/>
-                        <i class="icon-star"></i><strong>Major Responsibilities: </strong>Front end design, data mining, using angular to dynamically fill pages, and embedding media. <br/>
                     </p>
                 </div>
             </div>
-
-            <h3 class="title-bg"> _(┐「ε:)_ &nbsp The Tools We Used &nbsp _(┐「ε:)_</h3>
-            <div class="row">
-                <div class="span12">
-                    <li><strong>Python</strong></li>
-                    <p> Python is one of the languages used to help bring our application to life. Its functionality allows for easy data manipulation. In combination with other tools, its syntax provides for easier interpretation and cleaner presentation.</p>
-                    <li><strong>Flask</strong></li>
-                    <p> Flask is a microframework for Python and serves as the foundation for our application. It uses Jinja2 templating and RESTful request dispatching. This tool helped facilitate our web application development process overall.</p>
-                    <li><strong>Bootstrap</strong></li>
-                     <p> Bootstrap is an open source framework that uses HTML, CSS, and JS. It helped both speed up and ease our front end development because of how flexible it is. </p>
-                    <li><strong>Piccolo</strong></li>
-                    <p> Piccolo is a bootstrap HTML template. We implemented this tool to enhance the presentation of our application and give it a more aesthethically pleasing appearance.</p>
-                    <li><strong>nginx</strong></li>
-                    <p> nginx is a high-performance HTTP server and reverse proxy. This tool was used to serve our application by handling the requests sent by our API. </p>
-                    <li><strong>uWSGI</strong></li>
-                    <p> uWSGI is a deployment option for severs. Because we decided to use nginx, combining it with uWSGI gives us more flexibility and better performance because of the configurations it offers.  </p>
-                    <li><strong>Apiary</strong></li>
-                    <p> Apiary is a tool that allowed for an easier, faster and more efficient creation of our API. It offers different tools to prototype your API and configure it to your liking. </p>
-                    <li><strong>Github</strong></li>
-                    <p> Github is a web-based Git repository. Since the project is being worked on
-                    by several team members concurrently, it allows for more efficient contributions towards the overall project. In addition, it helps simulate a real world environment of software development and version control. </p>
-                    <li><strong>Rackspace</strong></li>
-                    <p> Rackspace has allowed our team to host our application using one of their virtual machines which has 1gb RAM and 20gb of storage. </p>
-                    <li><strong>AngularJS</strong></li>
-                    <p> Angular is a web application framework that allows us to dynamically fill the pages with content. We utilized Angular by calling GET on our RESTful API and using the content to fill a template page for each race/theme/challenge. It has been a great tool for separating our front end from the back end.</p>
-                    <li><strong>Jinja2</strong></li>
-                    <p> Jinja is a templating framework that comes with Flask. It allows us to push information through our funruns app file straight to the page, but is not a good way to decouple the front end from the back end. Therefore, it is used sparingly and only in the template pages to provide an ID of what page to load.</p>
-                </div>
-            </div>
-            <div>
-                <p><strong>Total Github Commits:</strong> 270</p>
-            </div>
-
-            <a href="https://github.com/anwilliams93/cs373-idb"> Github Repo</a><br/><br/>
-	    <a href="http://docs.funruns2k15.apiary.io/"> Apiary</a><br/><br/>
         </div> 
 
         <div class="span6">
