--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -76,6 +76,7 @@
               <li><a href="/themes">Fun Themes</a></li>
               <li class="active"><a href="/challenges">Fun Challenges</a></li>
               <li><a href="/locations">Fun Locations</a></li>
+              <li><a href="/tech">Technical</a></li>
               <li><a href="/about">About</a></li>
             </ul>
          
@@ -92,6 +93,7 @@
                     <option value="/themes">Fun Themes</option>
                     <option value="/challenges">Fun Challenges</option>
                     <option value="/locations">Fun Locations</option>
+                    <option value="/tech">Technical</option>
                     <option value="/about">About</option>
                 </select>
               </div>
