Making pictures smaller

--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -38,6 +38,7 @@
 <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.flexslider.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jquery.custom.js') }}"></script>
+<script src="{{ url_for('static', filename='js/jquery.prettyPhoto.js') }}"></script>
 <script type="text/javascript">
      $(window).load(function(){
 
