--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -269,7 +269,10 @@
                     OK
                 </div>
             </div>
-
+            <h2 class="title-bg">NBA API</h2>
+            
+            
+            
             <h2 class="title-bg"> _(┐「ε:)_ &nbsp The Tools We Used &nbsp _(┐「ε:)_</h3>
             <div class="row">
                 <div class="span12">
