Tests working using a file, but does run on page

--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -187,58 +187,10 @@
             <h2 class="title-bg">Test Output</h2>
             <div class="row">
                 <div class="span12">
-                    <h3>RESTful API TESTS</h1>
-                    test_challenge_run_0 (__main__.TestAPI) ... ok<br/>
-                    test_challenge_run_1 (__main__.TestAPI) ... ok<br/>
-                    test_challenge_run_2 (__main__.TestAPI) ... ok<br/>
-                    test_challenge_themes_0 (__main__.TestAPI) ... ok<br/>
-                    test_challenge_themes_1 (__main__.TestAPI) ... ok<br/>
-                    test_challenge_themes_2 (__main__.TestAPI) ... ok</br>
-                    test_challenges_by_id_0 (__main__.TestAPI) ... ok<br/>
-                    test_challenges_by_id_1 (__main__.TestAPI) ... ok<br/>
-                    test_challenges_by_id_2 (__main__.TestAPI) ... ok<br/>
-                    test_get_challenges (__main__.TestAPI) ... ok<br/>
-                    test_get_challenges_slash (__main__.TestAPI) ... ok</br>
-                    test_get_run_by_id_0 (__main__.TestAPI) ... ok<br/>
-                    test_get_run_by_id_0_slash (__main__.TestAPI) ... ok<br/>
-                    test_get_run_by_id_1 (__main__.TestAPI) ... ok</br>
-                    test_get_run_by_id_2 (__main__.TestAPI) ... ok</br>
-                    test_get_run_challenges_0 (__main__.TestAPI) ... ok<br/>
-                    test_get_run_challenges_1 (__main__.TestAPI) ... ok</br>
-                    test_get_run_challenges_2 (__main__.TestAPI) ... ok</br>
-                    test_get_run_themes_0 (__main__.TestAPI) ... ok<br/>
-                    test_get_run_themes_1 (__main__.TestAPI) ... ok</br>
-                    test_get_run_themes_2 (__main__.TestAPI) ... ok<br/>
-                    test_get_runs (__main__.TestAPI) ... ok</br>
-                    test_get_runs_slash (__main__.TestAPI) ... ok</br>
-                    test_get_themes (__main__.TestAPI) ... ok</br>
-                    test_get_themes_slash (__main__.TestAPI) ... ok</br>
-                    test_locations (__main__.TestAPI) ... ok</br>
-                    test_locations_by_id_0 (__main__.TestAPI) ... ok</br>
-                    test_locations_by_id_1 (__main__.TestAPI) ... ok</br>
-                    test_locations_by_id_2 (__main__.TestAPI) ... ok</br>
-                    test_locations_by_id_3 (__main__.TestAPI) ... ok</br>
-                    test_root (__main__.TestAPI) ... ok</br>
-                    test_root_slash (__main__.TestAPI) ... ok</br>
-                    test_theme_challenges_0 (__main__.TestAPI) ... ok</br>
-                    test_theme_challenges_0_slash (__main__.TestAPI) ... ok</br>
-                    test_theme_challenges_1 (__main__.TestAPI) ... ok</br>
-                    test_theme_challenges_2 (__main__.TestAPI) ... ok</br>
-                    test_theme_run_0 (__main__.TestAPI) ... ok</br>
-                    test_theme_run_1 (__main__.TestAPI) ... ok</br>
-                    test_theme_run_2 (__main__.TestAPI) ... ok</br>
-                    test_themes_by_id_0 (__main__.TestAPI) ... ok</br>
-                    test_themes_by_id_0_slash (__main__.TestAPI) ... ok</br>
-                    test_themes_by_id_1 (__main__.TestAPI) ... ok</br>
-                    test_themes_by_id_1_slash (__main__.TestAPI) ... ok</br>
-                    test_themes_by_id_2 (__main__.TestAPI) ... ok</br>
+                    <h3>RESTful API TESTS</h3>
+                    {{ output }}
 
-                    ----------------------------------------------------------------------<br/>
-                    Ran 44 tests in 1.233s<br/>
-
-                    OK<br/>
-
-                    <h3>Model Tests</h1>
+                    <h3>Model Tests</h3>
                     test_add_challenge (__main__.sql_dbTestCase) ... ok<br/>
                     test_add_funrun (__main__.sql_dbTestCase) ... ok<br/>
                     test_add_location (__main__.sql_dbTestCase) ... ok<br/>
@@ -269,11 +221,12 @@
                     OK
                 </div>
             </div>
+
             <h2 class="title-bg">NBA API</h2>
             
             
             
-            <h2 class="title-bg"> _(┐「ε:)_ &nbsp The Tools We Used &nbsp _(┐「ε:)_</h3>
+            <h2 class="title-bg"> _(┐「ε:)_ &nbsp The Tools We Used &nbsp _(┐「ε:)_</h2>
             <div class="row">
                 <div class="span12">
                     <li><strong>Python</strong></li>
