Trying to make models test work

--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -99,6 +99,11 @@
               </div>
             </form>
             
+            <div class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown">
+                <b class="caret"></b>
+              </a>
+            </div>
         </div>
       
     </div><!-- End Header -->
