--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -188,37 +188,10 @@
             <div class="row">
                 <div class="span12">
                     <h3>RESTful API TESTS</h3>
-                    {{ output }}
+                    <pre>{{ api_output }}</pre>
 
                     <h3>Model Tests</h3>
-                    test_add_challenge (__main__.sql_dbTestCase) ... ok<br/>
-                    test_add_funrun (__main__.sql_dbTestCase) ... ok<br/>
-                    test_add_location (__main__.sql_dbTestCase) ... ok<br/>
-                    test_add_themes (__main__.sql_dbTestCase) ... ok<br/>
-                    test_challenges (__main__.sql_dbTestCase) ... ok<br/>
-                    test_fun_challenge_relationship_1 (__main__.sql_dbTestCase) ... ok<br/>
-                    test_fun_challenge_relationship_2 (__main__.sql_dbTestCase) ... ok<br/>
-                    test_fun_challenge_relationship_3 (__main__.sql_dbTestCase) ... ok<br/>
-                    test_fun_location_relationship_1 (__main__.sql_dbTestCase) ... ok<br/>
-                    test_fun_location_relationship_2 (__main__.sql_dbTestCase) ... ok<br/>
-                    test_fun_location_relationship_3 (__main__.sql_dbTestCase) ... ok<br/>
-                    test_fun_location_relationship_4 (__main__.sql_dbTestCase) ... ok<br/>
-                    test_fun_theme_relationship_1 (__main__.sql_dbTestCase) ... ok<br/>
-                    test_fun_theme_relationship_2 (__main__.sql_dbTestCase) ... ok<br/>
-                    test_fun_theme_relationship_3 (__main__.sql_dbTestCase) ... ok<br/>
-                    test_fun_theme_relationship_4 (__main__.sql_dbTestCase) ... ok<br/>
-                    test_funrun (__main__.sql_dbTestCase) ... ok<br/>
-                    test_location (__main__.sql_dbTestCase) ... ok<br/>
-                    test_theme_challenge_relationship_1 (__main__.sql_dbTestCase) ... ok<br/>
-                    test_theme_challenge_relationship_2 (__main__.sql_dbTestCase) ... ok<br/>
-                    test_theme_challenge_relationship_3 (__main__.sql_dbTestCase) ... ok<br/>
-                    test_theme_challenge_relationship_4 (__main__.sql_dbTestCase) ... ok<br/>
-                    test_themes (__main__.sql_dbTestCase) ... ok<br/>
-
-                    ----------------------------------------------------------------------</br>
-                    Ran 23 tests in 0.232s<br/><br/>
-
-                    OK
+                    <pre>{{ model_output }}</pre>
                 </div>
             </div>
 
