--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -98,13 +98,20 @@
                 </select>
               </div>
             </form>
+        </div>
             
             <div class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown">
+                Sorty by
                 <b class="caret"></b>
               </a>
+              <ul class="dropdown-menu">
+                <li>Name</li>
+                <li>Price</li>
+                <li>Distance</li>
+                <li>Date</li>
+              </ul>
             </div>
-        </div>
       
     </div><!-- End Header -->
      
