--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -99,6 +99,9 @@
               </div>
             </form>
         </div>
+      
+    </div><!-- End Header -->
+     
             
             <div class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown">
@@ -106,15 +109,12 @@
                 <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li>Name</li>
-                <li>Price</li>
-                <li>Distance</li>
-                <li>Date</li>
+                <li><a>Name</a></li>
+                <li><a>Price</a></li>
+                <li><a>Distance</a></li>
+                <li><a>Date</a></li>
               </ul>
             </div>
-      
-    </div><!-- End Header -->
-     
     <!-- Page Content
     ================================================== --> 
     <div class="row">
