Added sort by drop down menu

--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -102,19 +102,24 @@
       
     </div><!-- End Header -->
      
-            
-            <div class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown">
-                Sorty by
-                <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li><a>Name</a></li>
-                <li><a>Price</a></li>
-                <li><a>Distance</a></li>
-                <li><a>Date</a></li>
-              </ul>
-            </div>
+    <!-- Sort -->   
+    <div class="dropdown">
+      <a class="dropdown-toggle" data-toggle="dropdown">
+        <h4>
+          Sort by
+          <b class="caret"></b>
+        </h4>
+      </a>
+      <ul class="dropdown-menu">
+        <li><a>Name</a></li>
+        <li><a>Price</a></li>
+        <li><a>Distance</a></li>
+        <li><a>Date</a></li>
+      </ul>
+    </div>
+    <!-- End Sort -->
+
+
     <!-- Page Content
     ================================================== --> 
     <div class="row">
