documentation for travis

--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -110,13 +110,16 @@
           <b class="caret"></b>
         </h4>
       </a>
+      <form action="loadSortedRuns">
       <ul class="dropdown-menu">
-        <li><a>Name</a></li>
-        <li><a>Price</a></li>
-        <li><a>Distance</a></li>
-        <li><a>Date</a></li>
+        <li><a value="name">Name</a></li>
+        <li><a value="price">Price</a></li>
+        <li><a value="distance">Distance</a></li>
+        <li><a value="date">Date</a></li>
       </ul>
+    </form>
     </div>
+
     <!-- End Sort -->
 
 
