documentation for travis

--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -110,14 +110,14 @@
           <b class="caret"></b>
         </h4>
       </a>
-      <form action="loadSortedRuns">
       <ul class="dropdown-menu">
+      <form action>
         <li><a value="name">Name</a></li>
         <li><a value="price">Price</a></li>
         <li><a value="distance">Distance</a></li>
         <li><a value="date">Date</a></li>
-      </ul>
     </form>
+      </ul>
     </div>
 
     <!-- End Sort -->
