Trying to get tests to run better

--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -187,11 +187,11 @@
             <h2 class="title-bg">Test Output</h2>
             <div class="row">
                 <div class="span12">
-                    <h3>RESTful API TESTS</h3>
-                    <pre>{{ api_output }}</pre>
-
-                    <h3>Model Tests</h3>
-                    <pre>{{ model_output }}</pre>
+                    <a href="/tests" alt="website">
+                    <button class="btn btn-warning pull-left" type="button">
+                      <div style="color: white">Run Tests</div>
+                    </button>
+                    </a>
                 </div>
             </div>
 
