--- a/app/templates/tech.html
+++ b/app/templates/tech.html
@@ -196,6 +196,15 @@
             </div>
 
             <h2 class="title-bg">NBA API</h2>
+            <div class="row">
+                <div class="span12">
+                    <a href="/nba" alt="website">
+                    <button class="btn btn-warning pull-left" type="button">
+                      <div style="color: white">Run Tests</div>
+                    </button>
+                    </a>
+                </div>
+            </div>
             
             
             
