Added description and placeholder data to be replaced with graphs

--- a/app/templates/nba.html
+++ b/app/templates/nba.html
@@ -111,11 +111,32 @@
     
     <!-- Title Header -->
 
-    <h2 class="title-bg">Test Output</h2>
+    <h2 class="title-bg">NBA API</h2>
     <div class="row">
         <div class="span12">
-            <h3>RESTful API TESTS</h3>
-            <pre></pre>
+            <h3>Hollinger Scores for teams and players</h3>
+            <Li>John Hollinger is currently the Vice President of Basketball Operations for the Memphis Grizzlies and has worked as an analyst for ESPN. During the late 90s, he developed the Player Efficiency Rating (PER) which attempts to combine all of a player's contributions into one number. Hollinger later developed a simpler formula as an extension to the PER as an attempt to quantify a player's performance in a given game. Instead of applying it to players, we used this simpler formula with the NBA DB API to find the most efficient teams in a given season<li>
+            
+            <Li><strong>Top 5 teams for 2012</strong><li>
+            <p>Denver Nuggets 75.48</p>
+            <p>Oklahoma City Thunder 75.39</p>
+            <p>San Antonio Spurs 71.91</p>
+            <p>Miami Heat 71.91</p>
+            <p>Los Angeles Clippers 69.83</p>
+
+            <Li><strong>Top 5 teams for 2013</strong><li>
+            <p>San Antonio Spurs 73.53</p>
+            <p>Los Angeles Clippers 73.01</p>
+            <p>Minnesota Timberwolves 71.87</p>
+            <p>Dallas Mavericks 70.87</p>
+            <p>Oklahoma City Thunder 70.80</p>
+
+            <Li><strong>Top 5 teams for 2014</strong><li>
+            <p>Golden State Warriors 77.07</p>
+            <p>Los Angeles Clippers 70.49</p>
+            <p>San Antonio Spurs 69.22</p>
+            <p>Atlanta Hawks 68.69</p>
+            <p>Memphis Grizzlies 68.00</p>
 
         </div>
     </div>   
